[package]
name = "blindbidproof"
version = "0.1.0"
authors = ["kev <kevtheappdev@gmail.com>", "zer0 <matteo@dusk.network>"]
edition = "2018"

[dependencies]
failure = "0.1"
merlin = "1.0.1"
rand = "0.6"
subtle = "2"
curve25519-dalek = { version = "1.0.1", features = ["serde", "avx2_backend"] }
libc = "0.2"
lazy_static = "1.2.0"
sha2 = "0.8.0"
chrono = "0.4.6"
log = "0.4.6"
env_logger = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]

[profile.release]
panic = 'abort'
lto = true
incremental = false
codegen-units = 1
# rustflags = "-C target_feature=+avx2"
